<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MenuActivity">

    <Button
        android:id="@+id/btnDeletar"
        android:layout_width="133dp"
        android:layout_height="69dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="64dp"
        android:background="@color/roxo"
        android:fontFamily="sans-serif"
        android:text="@string/deletarp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAlterar"
        app:layout_constraintTop_toBottomOf="@+id/btnListar" />

    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="133dp"
        android:layout_height="69dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="38dp"
        android:background="@color/roxo"
        android:fontFamily="sans-serif"
        android:text="@string/alterarp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />

    <Button
        android:id="@+id/btnListar"
        android:layout_width="133dp"
        android:layout_height="69dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="64dp"
        android:background="@color/roxo"
        android:fontFamily="sans-serif"
        android:text="@string/listarp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ScrollView
        android:id="@+id/imdmarket"
        android:layout_width="414dp"
        android:layout_height="90dp"
        android:background="@color/orange"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="86dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        tools:ignore="MissingConstraints"
        android:layout_gravity="center"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="51dp"
        android:text="@string/oqdeseja"
        android:textColor="#C0000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imdmarket" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="133dp"
        android:layout_height="69dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="46dp"
        android:background="@color/roxo"
        android:fontFamily="sans-serif"
        android:text="@string/cadastrarp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>