<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.DeletarProdutoActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        android:text="@string/deletarp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imdmarket" />

    <Button
        android:id="@+id/btnlimpar3"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="88dp"
        android:background="@color/roxo"
        android:text="@string/limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cod_prod" />

    <Button
        android:id="@+id/btndeletarproduto"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        android:background="@color/roxo"
        android:text="@string/deletar"
        app:layout_constraintEnd_toStartOf="@+id/btnlimpar3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cod_prod"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/cod_prod"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="35dp"
        android:text="@string/codigo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cod_prod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ScrollView
        android:id="@+id/imdmarket"
        android:layout_width="414dp"
        android:layout_height="90dp"
        android:background="@color/orange"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/imdmarket"
        android:layout_width="412dp"
        android:layout_height="86dp"
        android:text="IMDMARKET"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:layout_gravity="center"
        android:gravity="center" />



</androidx.constraintlayout.widget.ConstraintLayout>